Cherry-pick r247793. rdar://problem/53648076

Regression(r247400): Unable to log into AIB Mobile Banking App
    https://bugs.webkit.org/show_bug.cgi?id=200094
    <rdar://problem/52519818>

    Reviewed by Brent Fulgham.

    In r247400, a change was made to only set the 'app has universal sandbox access' flag
    only when issueing the sandbox extension for / actually succeeded (it usually fails
    in practice). Previously, AIB Mobile Banking app was relying on this behavior to
    trigger a load for file:///login which is outside their container. However, now that
    the 'app has universal sandbox access' flag is no longer set, it trips our security
    checks and the load gets ignored.

    To address the issue, apply only the 'app has universal sandbox access' flag fix with
    a linked-on-after check.

    * UIProcess/Cocoa/VersionChecks.h:
    * UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::maybeInitializeSandboxExtensionHandle):

    Canonical link: https://commits.webkit.org/213923@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247793 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.119@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@247980 268f45cc-cd09-0410-ab3c-d52691b4dbfc